Responsive bug fixed

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 		
 		<!-- Custom stylesheet -->
 		<link rel="stylesheet" href="css/stylesheet.css">
+		
+		<!-- Font Awesome -->
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 	</head>
 	
 	
@@ -30,7 +33,7 @@
             	</ul>
                
                 <ul class="nav hidden-xs" id="lg-menu">
-	                <li class="sidebar-brand"><a href="index.html">Brand </a></li>
+	                <li class="sidebar-brand"><a href="index.html"> Sean </a></li>
                     <li class="active"><a href="#featured"><i class="glyphicon glyphicon-list-alt"></i> Featured</a></li>
                     <li><a href="#stories"><i class="glyphicon glyphicon-list"></i> Stories</a></li>
                     <li><a href="#"><i class="glyphicon glyphicon-paperclip"></i> Saved</a></li>
@@ -38,12 +41,15 @@
                 </ul>
                 <ul class="list-unstyled hidden-xs" id="sidebar-footer">
                     <li>
-                      <a href="http://www.bootply.com"><h3>Bootstrap</h3> <i class="glyphicon glyphicon-heart-empty"></i> Bootply</a>
+                      <a href="https://www.linkedin.com/in/saehunseanoh"><i class="fa fa-linkedin-square fa-lg"></i></a>
+                      <a href="https://github.com/seanoh1989"><i class="fa fa-github fa-lg"></i></a>
+                      <a href="http://stackoverflow.com/users/3690442/saehun-sean-oh?tab=profile"><i class="fa fa-stack-overflow fa-lg"></i></a>
                     </li>
                 </ul>
               
               	<!-- tiny only nav-->
               <ul class="nav visible-xs" id="xs-menu">
+	                <li class="sidebar-brand"><a href="index.html" class="text-center">&nbsp;S</a></li>
                   	<li><a href="#featured" class="text-center"><i class="glyphicon glyphicon-list-alt"></i></a></li>
                     <li><a href="#stories" class="text-center"><i class="glyphicon glyphicon-list"></i></a></li>
                   	<li><a href="#" class="text-center"><i class="glyphicon glyphicon-paperclip"></i></a></li>
