skills, projects added. incomplete

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
 		<!-- Font Awesome -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
+		<!-- Hover -->
+		<link href="css/hover.css" rel="stylesheet" media="all">
+
 		<!-- Sans Pro Fontface -->
 		<link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700' rel='stylesheet' type='text/css'>
 		
@@ -107,17 +110,299 @@
 	            </div>
 	            <div class="row">
 	                <div class="col-lg-4 col-lg-offset-2">
-	                    <p>Hello World</p>
+	                    <p>I am a senior in <i>Computer Science major at University of California, San Diego</i>. I started programming when I transferred to UCSD (2013), and ever since I took my first programming class, I could never stop lovin' coding. I have learned many programming languages (e.g. Java, C, C++, Python, etc), algorithms, design patterns, security, and many other topics through coursework. </p>
 	                </div>
 	                <div class="col-lg-4">
-	                    <p>This is test.</p>
+	                    <p>Using knowledge I learned, I started multiple projects of my own, with friends, or profesionally. I love attending hackathon and feel the passion throughout the event. I have learned so much real life experience that I could not learn from school by working outside coursework. I am getting ready to become a professional Software Engineer when I graduate on <i>June, 2016</i>.</p>
 	                </div>
-	                
 	            </div>
 	        </div>
 	    </section>
+	    <!-- /About -->
+
+	    <!-- Skill Overview -->
+	    <section class="success" id="skills">
+	        <div class="container">
+	            <div class="row">
+	                <div class="col-lg-12 text-center">
+	                    <h2>Skill Overview</h2>
+	                    <hr class="skills-hr">
+	                </div>
+	            </div>
+	            <div class="row">
+	            	<div class="col-sm-3 skills-item">
+	            		<a href="#" class="hvr-outline-out skills-link">
+	            			<span style="font-size:450%; color:#fff;">JAVA</span><br>
+	            			<span class="skill-name">JAVA</span>
+	            		</a>
+	            	</div>
+	            	<div class="col-sm-3  skills-item">
+	            		<a href="#" class="hvr-outline-out skills-link">
+	            			<span style="font-size:450%; color:#fff;">C</span><br>
+	            			<span class="skill-name">C</span>
+	            		</a>
+	            	</div>
+	            	<div class="col-sm-3  skills-item">
+	            		<a href="#" class="hvr-outline-out skills-link">
+	            			<span style="font-size:450%; color:#fff;">C++</span><br>
+	            			<span class="skill-name">C++</span>
+	            		</a>
+	            	</div>
+	            	<div class="col-sm-3  skills-item">
+	            		<a href="#" class="hvr-outline-out skills-link">
+	            			<span style="font-size:450%; color:#fff;">C#</span><br>
+	            			<span class="skill-name">C#</span>
+	            		</a>
+	            	</div>
+	            	<div class="col-sm-3  skills-item">
+	            		<a href="#" class="hvr-outline-out skills-link">
+	            			<span style="font-size:350%; color:#fff;">PYTHON</span><br>
+	            			<span class="skill-name">PYTHON</span>
+	            		</a>
+	            	</div>
+					<div class="col-sm-3  skills-item">
+	            		<a href="#" class="hvr-outline-out skills-link">
+	            			<span style="font-size:400%; color:#fff;">SPARC</span><br>
+	            			<span class="skill-name">SPARC ASSEMBLY</span>
+	            		</a>
+	            	</div>
+	            	<div class="col-sm-3  skills-item">
+	            		<a href="#" class="hvr-outline-out skills-link">
+	            			<span style="font-size:450%; color:#fff;">MIPS</span><br>
+	            			<span class="skill-name">MIPS ASSEMBLY</span>
+	            		</a>
+	            	</div>
+
+	            	<div class="col-sm-3 skills-item">
+	            		<a href="#" class="hvr-outline-out skills-link">
+	            			<i class="fa fa-android fa-5x"></i><br><br>
+	            			<span class="skill-name">ANDROID</span>
+	            		</a>
+	            	</div>
+	            	<div class="col-sm-3  skills-item">
+	            		<a href="#" class="hvr-outline-out skills-link">
+	            			<i class="fa fa-html5 fa-5x"></i><br><br>
+	            			<span class="skill-name">HTML5</span>
+	            		</a>
+	            	</div>
+	            	<div class="col-sm-3  skills-item">
+	            		<a href="#" class="hvr-outline-out skills-link">
+	            			<i class="fa fa-css3 fa-5x"></i><br><br>
+	            			<span class="skill-name">CSS3</span>
+	            		</a>
+	            	</div>
+	            	<div class="col-sm-3  skills-item">
+	            		<a href="#" class="hvr-outline-out skills-link">
+	            			<span style="font-size:450%; color:#fff;">JS</span><br>
+	            			<span class="skill-name">JAVASCRIPT</span>
+	            		</a>
+	            	</div>
+	            	<div class="col-sm-3  skills-item">
+	            		<a href="#" class="hvr-outline-out skills-link">
+	            			<img src="images/php-logo.png" style="width:80%; margin-top:-30px;">
+	            			<span class="skill-name">PHP SCRIPT</span>
+	            		</a>
+	            	</div>
+	            	<div class="col-sm-3  skills-item">
+	            		<a href="#" class="hvr-outline-out skills-link">
+	            			<img src="images/apache-logo.png" style="width:90%;">
+	            			<span class="skill-name">APACHE SERVER</span>
+	            		</a>
+	            	</div>
+	            	<div class="col-sm-3  skills-item">
+	            		<a href="#" class="hvr-outline-out skills-link">
+	            			<i class="fa fa-linux fa-5x"></i><br><br>
+	            			<span class="skill-name">LINUX</span>
+	            		</a>
+	            	</div>
+	            	<div class="col-sm-3  skills-item">
+	            		<a href="#" class="hvr-outline-out skills-link">
+	            			<i class="fa fa- fa-git fa-5x"></i><br><br>
+	            			<span class="skill-name">VERSION CONTROL (GIT, SVN)</span>
+	            		</a>
+	            	</div>
+	            </div>
+	        </div>
+	    </section>
+	    <!-- /Skill Overview -->
+
+	    <!-- Projects -->
+	    <section id="projects">
+	        <div class="container">
+	            <div class="row">
+	                <div class="col-lg-12 text-center">
+	                    <h2>Projects</h2>
+	                    <hr class="projects-hr">
+	                </div>
+	            </div>
+	            <div class="row">
+	                <div class="col-sm-4 projects-item">
+	                    <a href="#projectsModal1" class="projects-link" data-toggle="modal">
+	                        <div class="caption">
+	                            <div class="caption-content">
+	                                <i class="fa fa-search-plus fa-3x"></i>
+	                            </div>
+	                        </div>
+	                        <img src="images/projects/maxphone.png" class="img-responsive" alt="">
+	                    </a>
+	                </div>
+	                <div class="col-sm-4 projects-item">
+	                    <a href="#projectsModal2" class="projects-link" data-toggle="modal">
+	                        <div class="caption">
+	                            <div class="caption-content">
+	                                <i class="fa fa-search-plus fa-3x"></i>
+	                            </div>
+	                        </div>
+	                        <img src="images/projects/flipbooks.png" class="img-responsive" alt="">
+	                    </a>
+	                </div>
+	                <div class="col-sm-4 projects-item">
+	                    <a href="#projectsModal3" class="projects-link" data-toggle="modal">
+	                        <div class="caption">
+	                            <div class="caption-content">
+	                                <i class="fa fa-search-plus fa-3x"></i>
+	                            </div>
+	                        </div>
+	                        <img src="images/projects/brickpuncher.png" class="img-responsive" alt="">
+	                    </a>
+	                </div>
+	                <div class="col-sm-4 projects-item">
+	                    <a href="#projectsModal4" class="projects-link" data-toggle="modal">
+	                        <div class="caption">
+	                            <div class="caption-content">
+	                                <i class="fa fa-search-plus fa-3x"></i>
+	                            </div>
+	                        </div>
+	                        <img src="images/projects/optchelper.png" class="img-responsive" alt="">
+	                    </a>
+	                </div>
+	                <div class="col-sm-4 projects-item">
+	                    <a href="#projectsModal5" class="projects-link" data-toggle="modal">
+	                        <div class="caption">
+	                            <div class="caption-content">
+	                                <i class="fa fa-search-plus fa-3x"></i>
+	                            </div>
+	                        </div>
+	                        <img src="images/projects/cler.png" class="img-responsive" alt="">
+	                    </a>
+	                </div>
+	                <div class="col-sm-4 projects-item">
+	                    <a href="#projectsModal6" class="projects-link" data-toggle="modal">
+	                        <div class="caption">
+	                            <div class="caption-content">
+	                                <i class="fa fa-search-plus fa-3x"></i>
+	                            </div>
+	                        </div>
+	                        <img src="images/projects/typetowake.png" class="img-responsive" alt="">
+	                    </a>
+	                </div>
+	                <div class="col-sm-4 projects-item">
+	                    <a href="#projectsModal7" class="projects-link" data-toggle="modal">
+	                        <div class="caption">
+	                            <div class="caption-content">
+	                                <i class="fa fa-search-plus fa-3x"></i>
+	                            </div>
+	                        </div>
+	                        <img src="images/projects/elm.png" class="img-responsive" alt="">
+	                    </a>
+	                </div>
+	                <div class="col-sm-4 projects-item">
+	                    <a href="#projectsModal8" class="projects-link" data-toggle="modal">
+	                        <div class="caption">
+	                            <div class="caption-content">
+	                                <i class="fa fa-search-plus fa-3x"></i>
+	                            </div>
+	                        </div>
+	                        <img src="images/projects/routie.png" class="img-responsive" alt="">
+	                    </a>
+	                </div>
+	                <div class="col-sm-4 projects-item">
+	                    <a href="#projectsModal9" class="projects-link" data-toggle="modal">
+	                        <div class="caption">
+	                            <div class="caption-content">
+	                                <i class="fa fa-search-plus fa-3x"></i>
+	                            </div>
+	                        </div>
+	                        <img src="images/projects/ganjeek.png" class="img-responsive" alt="">
+	                    </a>
+	                </div>
+	                <div class="col-sm-4 projects-item">
+	                    <a href="#projectsModal10" class="projects-link" data-toggle="modal">
+	                        <div class="caption">
+	                            <div class="caption-content">
+	                                <i class="fa fa-search-plus fa-3x"></i>
+	                            </div>
+	                        </div>
+	                        <img src="images/projects/hautelook.png" class="img-responsive" alt="">
+	                    </a>
+	                </div>
+	                <div class="col-sm-4 projects-item">
+	                    <a href="#projectsModal11" class="projects-link" data-toggle="modal">
+	                        <div class="caption">
+	                            <div class="caption-content">
+	                                <i class="fa fa-search-plus fa-3x"></i>
+	                            </div>
+	                        </div>
+	                        <img src="images/projects/waitlist.png" class="img-responsive" alt="">
+	                    </a>
+	                </div>	                
+	                <div class="col-sm-4 projects-item">
+	                    <a href="#projectsModal12" class="projects-link" data-toggle="modal">
+	                        <div class="caption">
+	                            <div class="caption-content">
+	                                <i class="fa fa-search-plus fa-3x"></i>
+	                            </div>
+	                        </div>
+	                        <img src="images/projects/security.png" class="img-responsive" alt="">
+	                    </a>
+	                </div>
+	            </div>
+	        </div>
+	    </section>
+	    <!-- /Projects -->
 
 
+
+	    <!-- Project Modals -->
+	    <div class="projects-modal modal fade" id="projectsModal1" tabindex="-1" role="dialog" aria-hidden="true">
+	        <div class="modal-content">
+	            <div class="close-modal" data-dismiss="modal">
+	                <div class="lr">
+	                    <div class="rl">
+	                    </div>
+	                </div>
+	            </div>
+	            <div class="container">
+	                <div class="row">
+	                    <div class="col-lg-8 col-lg-offset-2">
+	                        <div class="modal-body">
+	                            <h2>Project Title</h2>
+	                            <hr class="star-primary">
+	                            <img src="images/projects/maxphone.png" class="img-responsive img-centered" alt="">
+	                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+	                            <ul class="list-inline item-details">
+	                                <li>Client:
+	                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
+	                                    </strong>
+	                                </li>
+	                                <li>Date:
+	                                    <strong><a href="http://startbootstrap.com">April 2014</a>
+	                                    </strong>
+	                                </li>
+	                                <li>Service:
+	                                    <strong><a href="http://startbootstrap.com">Web Development</a>
+	                                    </strong>
+	                                </li>
+	                            </ul>
+	                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+	                        </div>
+	                    </div>
+	                </div>
+	            </div>
+	        </div>
+	    </div>
+
+	    <!-- /Project Modals -->
 		<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 		
