--- a/index.html
+++ b/index.html
@@ -130,95 +130,102 @@
 	                </div>
 	            </div>
 	            <div class="row">
-	            	<div class="col-sm-3 skills-item">
+	            	<div class="col-sm-2 skills-item">
 	            		<a href="#" class="hvr-outline-out skills-link">
-	            			<span style="font-size:450%; color:#fff;">JAVA</span><br>
+	            			<span style="font-size:300%; color:#fff;">JAVA</span><br>
 	            			<span class="skill-name">JAVA</span>
 	            		</a>
 	            	</div>
-	            	<div class="col-sm-3  skills-item">
+	            	<div class="col-sm-2  skills-item">
 	            		<a href="#" class="hvr-outline-out skills-link">
-	            			<span style="font-size:450%; color:#fff;">C</span><br>
+	            			<span style="font-size:300%; color:#fff;">C</span><br>
 	            			<span class="skill-name">C</span>
 	            		</a>
 	            	</div>
-	            	<div class="col-sm-3  skills-item">
+	            	<div class="col-sm-2  skills-item">
 	            		<a href="#" class="hvr-outline-out skills-link">
-	            			<span style="font-size:450%; color:#fff;">C++</span><br>
+	            			<span style="font-size:300%; color:#fff;">C++</span><br>
 	            			<span class="skill-name">C++</span>
 	            		</a>
 	            	</div>
-	            	<div class="col-sm-3  skills-item">
+	            	<div class="col-sm-2  skills-item">
 	            		<a href="#" class="hvr-outline-out skills-link">
-	            			<span style="font-size:450%; color:#fff;">C#</span><br>
+	            			<span style="font-size:300%; color:#fff;">C#</span><br>
 	            			<span class="skill-name">C#</span>
 	            		</a>
 	            	</div>
-	            	<div class="col-sm-3  skills-item">
+	            	<div class="col-sm-2  skills-item">
 	            		<a href="#" class="hvr-outline-out skills-link">
-	            			<span style="font-size:350%; color:#fff;">PYTHON</span><br>
+	            			<span style="font-size:180%; color:#fff;">PYTHON</span><br><br>
 	            			<span class="skill-name">PYTHON</span>
 	            		</a>
 	            	</div>
-					<div class="col-sm-3  skills-item">
+					<div class="col-sm-2  skills-item">
 	            		<a href="#" class="hvr-outline-out skills-link">
-	            			<span style="font-size:400%; color:#fff;">SPARC</span><br>
-	            			<span class="skill-name">SPARC ASSEMBLY</span>
+	            			<span style="font-size:200%; color:#fff;">SPARC</span><br>
+	            			<span class="skill-name" style="font-size:90%">SPARC ASSEMBLY</span>
 	            		</a>
 	            	</div>
-	            	<div class="col-sm-3  skills-item">
+	            	<div class="col-sm-2  skills-item">
 	            		<a href="#" class="hvr-outline-out skills-link">
-	            			<span style="font-size:450%; color:#fff;">MIPS</span><br>
-	            			<span class="skill-name">MIPS ASSEMBLY</span>
+	            			<span style="font-size:300%; color:#fff;">MIPS</span><br>
+	            			<span class="skill-name" style="font-size:90%">MIPS ASSEMBLY</span>
 	            		</a>
 	            	</div>
 
-	            	<div class="col-sm-3 skills-item">
+	            	<div class="col-sm-2 skills-item">
 	            		<a href="#" class="hvr-outline-out skills-link">
-	            			<i class="fa fa-android fa-5x"></i><br><br>
+	            			<i class="fa fa-android fa-3x"></i><br><br>
 	            			<span class="skill-name">ANDROID</span>
 	            		</a>
 	            	</div>
-	            	<div class="col-sm-3  skills-item">
+	            	<div class="col-sm-2  skills-item">
 	            		<a href="#" class="hvr-outline-out skills-link">
-	            			<i class="fa fa-html5 fa-5x"></i><br><br>
+	            			<i class="fa fa-html5 fa-3x"></i><br><br>
 	            			<span class="skill-name">HTML5</span>
 	            		</a>
 	            	</div>
-	            	<div class="col-sm-3  skills-item">
+	            	<div class="col-sm-2  skills-item">
 	            		<a href="#" class="hvr-outline-out skills-link">
-	            			<i class="fa fa-css3 fa-5x"></i><br><br>
+	            			<i class="fa fa-css3 fa-3x"></i><br><br>
 	            			<span class="skill-name">CSS3</span>
 	            		</a>
 	            	</div>
-	            	<div class="col-sm-3  skills-item">
+	            	<div class="col-sm-2  skills-item">
 	            		<a href="#" class="hvr-outline-out skills-link">
-	            			<span style="font-size:450%; color:#fff;">JS</span><br>
+	            			<span style="font-size:300%; color:#fff;">JS</span><br>
 	            			<span class="skill-name">JAVASCRIPT</span>
 	            		</a>
 	            	</div>
-	            	<div class="col-sm-3  skills-item">
+	            	<div class="col-sm-2  skills-item">
 	            		<a href="#" class="hvr-outline-out skills-link">
 	            			<img src="images/php-logo.png" style="width:80%; margin-top:-30px;">
 	            			<span class="skill-name">PHP SCRIPT</span>
 	            		</a>
 	            	</div>
-	            	<div class="col-sm-3  skills-item">
+	            	<div class="col-sm-2  skills-item">
 	            		<a href="#" class="hvr-outline-out skills-link">
 	            			<img src="images/apache-logo.png" style="width:90%;">
 	            			<span class="skill-name">APACHE SERVER</span>
 	            		</a>
 	            	</div>
-	            	<div class="col-sm-3  skills-item">
+	            	<div class="col-sm-2  skills-item">
 	            		<a href="#" class="hvr-outline-out skills-link">
-	            			<i class="fa fa-linux fa-5x"></i><br><br>
+	            			<i class="fa fa-database fa-3x"></i><br><br>
+	            			<span class="skill-name" style="font-size:90%">SQL DATABASE</span>
+	            		</a>
+	            	</div>
+
+	            	<div class="col-sm-2  skills-item">
+	            		<a href="#" class="hvr-outline-out skills-link">
+	            			<i class="fa fa-linux fa-3x"></i><br><br>
 	            			<span class="skill-name">LINUX</span>
 	            		</a>
 	            	</div>
-	            	<div class="col-sm-3  skills-item">
+	            	<div class="col-sm-2  skills-item">
 	            		<a href="#" class="hvr-outline-out skills-link">
-	            			<i class="fa fa- fa-git fa-5x"></i><br><br>
-	            			<span class="skill-name">VERSION CONTROL (GIT, SVN)</span>
+	            			<i class="fa fa- fa-git fa-3x"></i><br>
+	            			<span class="skill-name" style="font-size:73%">VERSION CONTROL <br>(GIT, SVN)</span>
 	            		</a>
 	            	</div>
 	            </div>
@@ -376,21 +383,21 @@
 	                <div class="row">
 	                    <div class="col-lg-8 col-lg-offset-2">
 	                        <div class="modal-body">
-	                            <h2>Project Title</h2>
+	                            <h2>MaXphone</h2>
 	                            <hr class="star-primary">
 	                            <img src="images/projects/maxphone.png" class="img-responsive img-centered" alt="">
-	                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+	                            <p>MaXphone Android app at MaXentric Technologies LLC.</p>
 	                            <ul class="list-inline item-details">
 	                                <li>Client:
-	                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
+	                                    <strong><a href="http://maxentric.com">MaXentric</a>
 	                                    </strong>
 	                                </li>
 	                                <li>Date:
-	                                    <strong><a href="http://startbootstrap.com">April 2014</a>
+	                                    <strong>August 2015 - Present
 	                                    </strong>
 	                                </li>
 	                                <li>Service:
-	                                    <strong><a href="http://startbootstrap.com">Web Development</a>
+	                                    <strong>Android App Development
 	                                    </strong>
 	                                </li>
 	                            </ul>
