--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 	                    <p>I am a senior in <i>Computer Science major at University of California, San Diego</i>. I started programming when I transferred to UCSD (2013), and ever since I took my first programming class, I could never stop lovin' coding. I have learned many programming languages (e.g. Java, C, C++, Python, etc), algorithms, design patterns, security, and many other topics through coursework. </p>
 	                </div>
 	                <div class="col-lg-4">
-	                    <p>Using knowledge I learned, I started multiple projects of my own, with friends, or profesionally. I love attending hackathon and feel the passion throughout the event. I have learned so much real life experience that I could not learn from school by working outside coursework. I am getting ready to become a professional Software Engineer when I graduate on <i>June, 2016</i>.</p>
+	                    <p>Using knowledge I learned, I started multiple projects of my own, with friends, or professionally. I love attending Hackathons and feel the passion throughout the event. I have learned so much real life experience that I could not learn from school by working outside coursework. I am getting ready to become a professional Software Engineer when I graduate on <i>June, 2016</i>.</p>
 	                </div>
 	            </div>
 	        </div>
@@ -460,16 +460,21 @@
 	    <!-- /Projects -->
 
 	    <!-- Contact -->
-	    <section id="contact">
+	    <section id="contact" class="success">
 	        <div class="container">
 	            <div class="row">
 	                <div class="col-lg-12 text-center">
-	                    <h2>Contact Me</h2>
-	                    <hr class="star-primary">
+	                    <h2>Resume & Contact</h2>
+	                    <hr class="contact-hr">
 	                </div>
 	            </div>
 	            <div style="text-align:center">
-	                <a href="mailto:seanoh1989@gmail.com"><button type="button" class="hvr-buzz-out btn btn-primary btn-lg btn-outline">seanoh1989@gmail.com</button></a>
+		            <a href="RESUME_Saehun_Oh.pdf" download><button type="button" class="hvr-buzz-out btn btn-primary btn-lg btn-outline"><i class="fa fa-download fa-2x" style="color:#627AAC"></i>&nbsp;&nbsp;Download Resume </button></a>
+		            <br><br>
+	                <a target="_blank" href="mailto:seanoh1989@gmail.com"><button type="button" class="hvr-buzz-out btn btn-primary btn-lg btn-outline">Send me an email!</button></a>
+	                <br><br> OR simply copy and paste the address
+	                <h3>seanoh1989@gmail.com</h3>
+	                <span style="font-size:80%;" data-toggle="tooltip" data-placement="right" title="To support all browsers, I have to use third party library like 'ZeroClipboard', but it requires Adobe Flash running on this website. Since Adobe Flash's future is not that bright, I decided not to use that at all.">(Why not use "Click to Copy?")</span>
 	            </div>
 	        </div>
 	    </section>
@@ -993,5 +998,10 @@
 		  ga('send', 'pageview');
 		</script>
 		
+		<script>
+			$(document).ready(function(){
+			    $('[data-toggle="tooltip"]').tooltip();   
+			});
+		</script>
 	</body>
 </html>
