--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 	        <div class="container">
 	            <div class="row">
 	                <div class="col-lg-12">
-	                    <img alt="profile" class="img-responsive" src="images/profile.jpg" alt="">
+	                    <img alt="profile" class="img-responsive" src="images/profile.jpg">
 	                    <div class="intro-text">
 	                        <span class="name">SAEHUN SEAN OH</span>
 	                        <hr class="links-hr">
@@ -993,11 +993,13 @@
 		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
 		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 		  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-		
+		  
 		  ga('create', 'UA-67482463-1', 'auto');
 		  ga('send', 'pageview');
+		  setTimeout("ga('send','event','Profitable Engagement','time on page more than 1 minute')", 60000);
 		</script>
 		
+		<!-- tooltip for why not -->
 		<script>
 			$(document).ready(function(){
 			    $('[data-toggle="tooltip"]').tooltip();   
