header bug fixed. footer added. removed contact section.

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 	                        <a href="#projects">PROJECTS</a>
 	                    </li>
 	                    <li class="page-scroll">
-	                        <a href="#contact">CONTACT</a>
+	                        <a href="#resume">RESUME</a>
 	                    </li>
 	                </ul>
 	            </div>
@@ -456,30 +456,55 @@
 	                </div>
 	            </div>
 	        </div>
+	        <div style="text-align:center" id="resume">
+		            <a class="hvr-buzz-out btn btn-primary btn-lg btn-outline" href="RESUME_Saehun_Oh.pdf" download><b>Download Resume</b></a>
+	            </div>
 	    </section>
 	    <!-- /Projects -->
 
-	    <!-- Contact -->
-	    <section id="contact" class="success">
-	        <div class="container">
-	            <div class="row">
-	                <div class="col-lg-12 text-center">
-	                    <h2>Resume & Contact</h2>
-	                    <hr class="contact-hr">
+		<!-- Footer -->
+	    <footer class="text-center">
+	        <div class="footer-above">
+	            <div class="container">
+	                <div class="row">
+	                    <div class="footer-col col-md-4">
+	                        <h3>Location</h3>
+	                        <p>San Diego, CA 92122</p>
+	                    </div>
+	                    <div class="footer-col col-md-4">
+	                        <h3>Links</h3>
+	                        <ul class="list-inline">
+	                            <li>
+	                            	<a target="_blank" href="https://www.linkedin.com/in/saehunseanoh" class="btn-social"><i class="fa fa-linkedin-square"></i></a>
+	                            </li>
+	                            <li>
+	                                <a target="_blank" href="https://github.com/seanoh1989" class="btn-social"><i class="fa fa-github"></i></a>
+	                            </li>
+	                            <li>
+	                                <a target="_blank" href="http://stackoverflow.com/users/3690442/saehun-sean-oh?tab=profile" class="btn-social"><i class="fa fa-stack-overflow"></i></a>
+	                            </li>
+	                            <li>
+	                                <a target="_blank" href="https://bitbucket.org/sao003/" class="btn-social"><i class="fa fa-bitbucket"></i></a>
+	                            </li>
+	                        </ul>
+	                    </div>
+	                    <div class="footer-col col-md-4">
+	                        <h3>Contact</h3>
+	                        <a target="_blank" href="mailto:seanoh1989@gmail.com" class="email-link">seanoh1989@gmail.com</a>
+	                    </div>
 	                </div>
 	            </div>
-	            <div style="text-align:center">
-		            <button type="button" class="hvr-buzz-out btn btn-primary btn-lg btn-outline"><a href="RESUME_Saehun_Oh.pdf" download><i class="fa fa-download fa-2x" style="color:#627AAC"></i>&nbsp;&nbsp;Download Resume </a></button>
-		            <br><br>
-	                <button type="button" class="hvr-buzz-out btn btn-primary btn-lg btn-outline"><a target="_blank" href="mailto:seanoh1989@gmail.com">Send me an email!</a></button>
-	                <br><br> OR simply copy and paste the address
-	                <h3>seanoh1989@gmail.com</h3>
-	                <span style="font-size:80%;" data-toggle="tooltip" data-placement="right" title="To support all browsers, I have to use third party library like 'ZeroClipboard', but it requires Adobe Flash running on this website. Since Adobe Flash's future is not that bright, I decided not to use that at all.">(Why not use "Click to Copy?")</span>
+	        </div>
+	        <div class="footer-below">
+	            <div class="container">
+	                <div class="row">
+	                    <div class="col-lg-12">
+	                        Copyright &copy; Saehun Sean Oh 2015
+	                    </div>
+	                </div>
 	            </div>
 	        </div>
-	    </section>
-	    <!-- /Contact -->
-
+	    </footer>
 
 	    <!-- Project Modals -->
 	    <!-- MaXentric -->
@@ -982,7 +1007,7 @@
 		<script src="js/classie.js"></script>
 
 		<!-- cbpAnimatedHeader -->
-		<script src="js/cbpAnimated.min.js"></script>
+		<script src="js/cbpAnimatedHeader.js"></script>
 
 		<!-- Freelancer Scrolling -->
 		<script src="js/freelancer.js"></script>
