--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 	    </nav>
 	    <!-- /Navbar -->
 		
-		<div id="toTop" class="fa fa-arrow-circle-up fa-5x"></div>
+		<div id="toTop"><span class="hvr-icon-up"></span></div>
 
 		<!-- Header -->
 	    <header>
@@ -87,11 +87,9 @@
 	                    <img alt="profile" class="img-responsive" src="images/profile.jpg">
 	                    <div class="intro-text">
 	                        <span class="name">SAEHUN SEAN OH</span>
-	                        <hr class="links-hr">
+	                        <hr class="star-hr">
 	                        <span class="links">
-	                        	<a href="https://www.linkedin.com/in/saehunseanoh"><i class="fa fa-linkedin-square fa-lg"></i></a>
-		                      	<a href="https://github.com/seanoh1989"><i class="fa fa-github fa-lg"></i></a>
-		                      	<a href="http://stackoverflow.com/users/3690442/saehun-sean-oh?tab=profile"><i class="fa fa-stack-overflow fa-lg"></i></a>
+	                        	Student at UCSD - Android App Developer - Web Developer
 		                    </span>
 	                    </div>
 	                </div>
