--- a/index.html
+++ b/index.html
@@ -129,153 +129,154 @@
 	                    <hr class="skills-hr">
 	                </div>
 	            </div>
-	            <div class="row-fluid">
-	            	<div class="col-xs-1 skills-item">
+	            <div class="row">
+	            	<div class="col-sm-1 skills-item">
 	            		<div class="hvr-float-shadow skills-link">
 	            			<span class="skill-icon" style="font-size:150%; color:#fff;">JAVA</span>
 	            			<span class="skill-name" style="font-size:150%;">JAVA</span>
 	            		</div>
 	            	</div>
-	            	<div class="col-xs-1  skills-item">
+	            	<div class="col-sm-1  skills-item">
 	            		<div class="hvr-float-shadow skills-link">
 	            			<span class="skill-icon" style="font-size:150%; color:#fff;">C</span>
 	            			<span class="skill-name" style="font-size:150%;">C</span>
 	            		</div>
 	            	</div>
-	            	<div class="col-xs-1  skills-item">
+	            	<div class="col-sm-1  skills-item">
 	            		<div class="hvr-float-shadow skills-link">
 	            			<span class="skill-icon" style="font-size:150%; color:#fff;">C++</span>
 	            			<span class="skill-name" style="font-size:150%;">C++</span>
 	            		</div>
 	            	</div>
-	            	<div class="col-xs-1  skills-item">
+	            	<div class="col-sm-1  skills-item">
 	            		<div class="hvr-float-shadow skills-link">
 	            			<span class="skill-icon" style="font-size:150%; color:#fff;">C#</span>
 	            			<span class="skill-name" style="font-size:150%;">C#</span>
 	            		</div>
 	            	</div>
-	            	<div class="col-xs-1  skills-item">
+	            	<div class="col-sm-1  skills-item">
 	            		<div class="hvr-float-shadow skills-link" style="padding-top:30px">
 	            			<span class="skill-icon" style="color:#fff;">PYTHON</span>
 	            			<span class="skill-name">PYTHON</span>
 	            		</div>
 	            	</div>
-					<div class="col-xs-1  skills-item">
+					<div class="col-sm-1  skills-item">
 	            		<div class="hvr-float-shadow skills-link" style="padding-top:30px">
 	            			<span class="skill-icon" style="color:#fff;">SPARC</span>
 	            			<span class="skill-name two-lines" style="font-size:90%">SPARC ASSEMBLY</span>
 	            		</div>
 	            	</div>
-	            	<div class="col-xs-1  skills-item">
+	            	<div class="col-sm-1  skills-item">
 	            		<div class="hvr-float-shadow skills-link" style="padding-top:30px">
 	            			<span class="skill-icon" style="font-size:120%; color:#fff;">MIPS</span>
 	            			<span class="skill-name two-lines" style="font-size:90%">MIPS ASSEMBLY</span>
 	            		</div>
 	            	</div>
-
-	            	<div class="col-xs-1 skills-item">
+	            	<div class="col-sm-1 skills-item">
 	            		<div class="hvr-float-shadow skills-link">
 	            			<i class="skill-icon fa fa-android fa-2x"></i>
 	            			<span class="skill-name icon-one-line">ANDROID</span>
 	            		</div>
 	            	</div>
-	            	<div class="col-xs-1  skills-item">
+	            	<div class="col-sm-1  skills-item">
 	            		<div class="hvr-float-shadow skills-link">
 	            			<i class="skill-icon fa fa-html5 fa-2x"></i>
 	            			<span class="skill-name icon-one-line" style="font-size:120%;">HTML5</span>
 	            		</div>
 	            	</div>
-	            	<div class="col-xs-1  skills-item">
+	            	<div class="col-sm-1  skills-item">
 	            		<div class="hvr-float-shadow skills-link">
 	            			<i class="skill-icon fa fa-css3 fa-2x"></i>
 	            			<span class="skill-name icon-one-line" style="font-size:120%;">CSS3</span>
 	            		</div> 
 	            	</div>
-	            	<div class="col-xs-1  skills-item">
+	            	<div class="col-sm-1  skills-item">
 	            		<div class="hvr-float-shadow skills-link">
 	            			<span class="skill-icon" style="font-size:150%; color:#fff;">JS</span>
 	            			<span class="skill-name icon-one-line" style="font-size:90%">JAVASCRIPT</span>
 	            		</div>
 	            	</div>
-	            	<div class="col-xs-1  skills-item">
+	            	<div class="col-sm-1  skills-item">
 	            		<div class="hvr-float-shadow skills-link">
 	            			<img alt="php" class="skill-icon" src="images/php-logo.png" style="width:80%; margin-top:-10px">
 	            			<span class="skill-name">PHP SCRIPT</span>
 	            		</div>
 	            	</div>
-	            	<div class="col-xs-1  skills-item">
+	            <!--/div-->
+		        <!--div class="row"-->
+	            	<div class="col-sm-1  skills-item">
 	            		<div class="hvr-float-shadow skills-link">
 	            			<img alt="apache" class="skill-icon" src="images/apache-logo.png" style="width:75%;">
 	            			<span class="skill-name">APACHE SERVER</span>
 	            		</div>
 	            	</div>
-	            	<div class="col-xs-1  skills-item">
+	            	<div class="col-sm-1  skills-item">
 	            		<div class="hvr-float-shadow skills-link">
 	            			<i class="skill-icon fa fa-database fa-2x"></i>
 	            			<span class="skill-name" style="font-size:90%">SQL DATABASE</span>
 	            		</div>
 	            	</div>
-	            	<div class="col-xs-1  skills-item">
+	            	<div class="col-sm-1  skills-item">
 	            		<div class="hvr-float-shadow skills-link">
 	            			<img alt="aws" class="skill-icon" src="images/aws-logo.png" style="width:50%;">
 	            			<span class="skill-name" style="font-size:85%">Amazon Web Services</span>
 	            		</div>
 	            	</div>
-	            	<div class="col-xs-1  skills-item">
+	            	<div class="col-sm-1  skills-item">
 	            		<div class="hvr-float-shadow skills-link">
 	            			<i class="skill-icon fa fa-linux fa-2x"></i>
 	            			<span class="skill-name icon-one-line" style="font-size:120%;">LINUX</span>
 	            		</div>
 	            	</div>
-	            	<div class="col-xs-1  skills-item">
+	            	<div class="col-sm-1  skills-item">
 	            		<div class="hvr-float-shadow skills-link">
 	            			<i class="skill-icon fa fa-apple fa-2x"></i>
 	            			<span class="skill-name icon-one-line" style="font-size:120%;">OSX</span>
 	            		</div>
 	            	</div>
-	            	<div class="col-xs-1  skills-item">
+	            	<div class="col-sm-1  skills-item">
 	            		<div class="hvr-float-shadow skills-link">
 	            			<i class="skill-icon fa fa-windows fa-2x"></i>
 	            			<span class="skill-name icon-one-line" style="font-size:90%;">WINDOWS</span>
 	            		</div>
 	            	</div>
-	            	<div class="col-xs-1  skills-item">
+	            	<div class="col-sm-1  skills-item">
 	            		<div class="hvr-float-shadow skills-link">
 	            			<i class="skill-icon fa fa-git fa-2x"></i>
 	            			<span class="skill-name" style="font-size:75%">VERSION CONTROL <br>(GIT, SVN)</span>
 	            		</div>
 	            	</div>
-	            	<div class="col-xs-1  skills-item">
+	            	<div class="col-sm-1  skills-item">
 	            		<div class="hvr-float-shadow skills-link">
 	            			<img alt="eclipse" class="skill-icon" src="images/eclipse-logo.png" style="width:40%;">
 	            			<span class="skill-name icon-one-line">ECLIPSE</span>
 	            		</div>
 	            	</div>
-	            	<div class="col-xs-1  skills-item">
+	            	<div class="col-sm-1  skills-item">
 	            		<div class="hvr-float-shadow skills-link">
 	            			<img alt="unity3d" class="skill-icon" src="images/unity3d-logo.png" style="width:40%;">
 	            			<span class="skill-name icon-one-line">UNITY3D</span>
 	            		</div>
 	            	</div>
-	            	<div class="col-xs-1  skills-item">
+	            	<div class="col-sm-1  skills-item">
 	            		<div class="hvr-float-shadow skills-link">
 	            			<img alt="gdb" class="skill-icon" src="images/gdb-logo.png" style="width:70%; margin-top:-15px">
 	            			<span class="skill-name icon-one-line" style="font-size:120%;">GDB</span>
 	            		</div>
 	            	</div>
-					<div class="col-xs-1  skills-item">
+					<div class="col-sm-1  skills-item">
 	            		<div class="hvr-float-shadow skills-link">
 	            			<i class="skill-icon fa fa-stack-exchange fa-2x"></i>
 	            			<span class="skill-name two-lines" style="font-size:90%;">STACK EXCHANGE</span>
 	            		</div>
 	            	</div>
-	            	<div class="col-xs-1  skills-item">
+	            	<div class="col-sm-1  skills-item">
 	            		<div class="hvr-pulse-grow skills-link skill-love">
 	            			<i class="skill-icon fa fa-heart fa-2x"></i>
 	            			<span class="skill-name icon-one-line" style="color: #000; font-size: 120%"><b>LOVE</b></span>
 	            		</div>
 	            	</div>
-	            </div>
+            	</div>
 	        </div>
 	    </section>
 	    <!-- /Skill Overview -->
