slight change on mobile page

--- a/index.html
+++ b/index.html
@@ -654,7 +654,7 @@
 								<ul>
 									<li class="cs_skeleton"><img src="images/projects/brickpuncher.png" style="width: 100%;"></li>
 									<li class="num0 img slide"> <img src="images/projects/brickpuncher.png" alt="brickpuncher" title="brickpuncher"></li>
-									<li class="num1 img slide"> <iframe width="640" height="480" src="https://www.youtube.com/embed/6URvpqJGct0" frameborder="0" allowfullscreen></iframe></li>
+									<li class="num1 img slide"> <div class="embed-responsive embed-responsive-4by3"><iframe class="embed-responsive-item" src="https://www.youtube.com/embed/6URvpqJGct0" allowfullscreen></iframe></div></li>
 									<li class="num2 img slide"> <img src="images/projects/brickpuncher1.png" alt="brickpuncher1" title="brickpuncher1"></li>
 									<li class="num3 img slide"> <img src="images/projects/brickpuncher2.png" alt="brickpuncher2" title="brickpuncher2"></li>
 									<li class="num4 img slide"> <img src="images/projects/brickpuncher3.png" alt="brickpuncher3" title="brickpuncher3"></li>
