some resources added

--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
 	                        </div>
 	                        <img alt="security" src="images/projects/security.png" class="img-responsive">
 	                        <div class="project-tags">
-	                        	<span class="project-tag-item"> &nbsp;<i class="fa fa-lock" style="color:black"></i>&nbsp;Security Practice &nbsp;</span>
+	                        	<span class="project-tag-item"> &nbsp;<i class="fa fa-lock" style="color:black"></i>&nbsp;Security Practice &nbsp;</span> <!-- add video: https://youtu.be/h1fbp35n31k -->
 	                        </div>
 	                    </a>
 	                </div>
