--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
 	                        <div class="project-tags">
 	                        	<span class="project-tag-item"> &nbsp;<i class="fa fa-android" style="color:black"></i> Android &nbsp;</span>
 	                        	<span class="project-tag-item"> &nbsp;<i class="fa fa-gamepad" style="color:black"></i> Game Development &nbsp;</span>
-	                        	<span class="project-tag-item"> &nbsp;<img alt="unity3d" src="images/unity3d-logo-dark-icon.png" style="margin-top:-3px;"></i> Unity3D &nbsp;</span>
+	                        	<span class="project-tag-item"> &nbsp;<img alt="unity3d" src="images/unity3d-logo-dark-icon.png" style="margin-top:-3px;"> Unity3D &nbsp;</span>
 	                        </div>
 	                    </a>
 	                </div>
@@ -720,7 +720,7 @@
 							            <span class="glyphicon glyphicon-chevron-right"></span>
 							        </a>
 							    </div>
-	                            <p>Brick Puncher is an Android action game that was originally developed for Google AdMob Contest. I took the project into a Mobile Development class and re-developed from scratch with three other friends. This was my first gaming development and it was one of my favorite projects so far. Download link is availble from <a target="_blank" href="https://play.google.com/store/apps/details?id=com.androidstudio.brickPuncher&hl=en">Google Play.</a></p>
+	                            <p>Brick Puncher is an Android action game that was originally developed for Google AdMob Contest. I took the project into a Mobile Development class and re-developed from scratch with three other friends. This was my first gaming development and it was one of my favorite projects so far. Download link is availble from <a target="_blank" href="https://play.google.com/store/apps/details?id=com.androidstudio.brickPuncher&amp;hl=en">Google Play.</a></p>
 	                            <p class="tech-used">C# in Unity3D was used to develop the game.</p>
 	                            <ul class="list-inline item-details">
 	                                <li>Date:
@@ -779,7 +779,7 @@
 							            <span class="glyphicon glyphicon-chevron-right"></span>
 							        </a>
 							    </div>
-	                            <p>One Piece Treasure Cruise Helper Application helps <a target="_blank" href="http://www.bandaigames.channel.or.jp/list/one_main/tc/en/">One Piece: Treasure Cruise</a> (<a target="_blank" href="https://play.google.com/store/apps/details?id=com.namcobandaigames.spmoja010E&hl=en">Google Play Link</a>) game players in multiple ways. It has integrated notifications to notify event schedules, damage calculator, and other tools that users can utilize to play the game efficiently. Currently other two other people I met online are involved as well.</p>
+	                            <p>One Piece Treasure Cruise Helper Application helps <a target="_blank" href="http://www.bandaigames.channel.or.jp/list/one_main/tc/en/">One Piece: Treasure Cruise</a> (<a target="_blank" href="https://play.google.com/store/apps/details?id=com.namcobandaigames.spmoja010E&amp;hl=en">Google Play Link</a>) game players in multiple ways. It has integrated notifications to notify event schedules, damage calculator, and other tools that users can utilize to play the game efficiently. Currently other two other people I met online are involved as well.</p>
 	                            <p class="tech-used">Java for the application and LAMP stack were used for developer's console (event time management, etc.).</p>
 	                            <ul class="list-inline item-details">
 	                                <li>Date:
